update gradle and its plugins update dependencies update minecraft to the latest stable paper build (1.21.4 does not work currently, probably do to the hard fork restructure) fix config key "slab-seating-position" having a tailing "g", thanks @seema84 moved the default values up, as the old ones looked wrong and resulted in glitching through blocks in case of carpets (some minecraft update changed the point of seating on armor stands down) removed helper method to check if a Material is air, as Material already has a method for this.